# auto-record-live

./: .env.example  .env.local  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.claude/hooks/: inject-subagent-context.py  session-start.py
.trellis/: .template-hashes.json  workflow.md
.venv-wsl/: pyvenv.cfg
data/bgm/: library.json
data/sfx/: library.json
examples/: stage-keywords.example.json
scripts/: probe_douyin_room.mjs  windows-agent-loop.ps1  windows-autostart.ps1  windows-orchestrator-loop.ps1  windows-postprocess-loop.ps1  windows-recorder-loop.ps1  windows-recovery-loop.ps1  windows-supervisor.ps1  wsl-orchestrator.sh  wsl-recorder-loop.sh
scripts/__tests__/: probe_douyin_room.test.mjs
src/arl/: __init__.py  cli.py  config.py
src/auto_record_live.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_config.py  test_failure_contracts.py  test_ffmpeg_runner.py  test_semantic_sfx.py
tests/e2e/: __init__.py  _helpers.py  test_full_pipeline.py
tests/highlights/: test_window_optimizer.py
tests/media/: test_recording_resolver.py
tests/orchestrator/: __init__.py  test_cookie_expired_event.py  test_multi_platform.py  test_recorder_cookie_expired_event.py  test_service.py  test_state_store.py
tests/pipeline/: test_auto_stage_hint_service.py  test_cli_cookie_health.py  test_cli_live_status.py  test_cli_stage_hint.py  test_cli_stage_signals_from_subtitles_e2e.py  test_cli_subtitles_e2e.py  test_cli_unattended.py  test_copywriter_service.py  test_editing_service.py  test_ffmpeg_resilience.py  (+20 more)
(+539 files in other folders)
