[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-record-live"
version = "0.1.0"
description = "Local-first pipeline for recording and processing Douyin League of Legends live streams."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
subtitles = [
  "faster-whisper>=1.0,<2",
]
vision = [
  "opencv-python>=4.8,<5",
  "numpy>=1.24,<2",
  "pillow>=10.0,<11",
  "pytesseract>=0.3,<1",
]

[project.scripts]
arl = "arl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
